# goldfishmem

./: .mcp.json  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  index.md  prd.md
docs/adr/: 001-graph-database-selection.md  002-context-construction-ownership.md  003-self-improvement-levers.md  004-observability-tooling.md  005-benchmark-selection.md  006-provenance-storage-strategy.md
docs/images/: architecture.excalidraw
goldfishmem/: __init__.py  hello.py  models.py
goldfishmem/config/: __init__.py  default_types.yaml
tests/: test_hello.py
tests/integration/: test_smoke.py
tests/unit/: test_config.py  test_models.py
